test/corpus/00-sourcefile.txt
================================================================================
Complex name and doc string, multiple flags, conditions and actions. TODO: move to other files
================================================================================

sp {
    hello-my/darling@stuff*to&do
    "this soar production is \"just a test\"
    (for now at least)}"
    :o-support:i-support
    ()
    ()
-->
    (funcFoo)
    (funcFoo)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (documentation)
      (flag)
      (flag))
    (cond
      (positiveCond
        (condsForOneId)))
    (cond
      (positiveCond
        (condsForOneId)))
    (funcCall
      (funcName
        (string)))
    (funcCall
      (funcName
        (string)))))

================================================================================
Multiple Productions
================================================================================

sp {one
    ()
    ()
-->
}

sp {two
    ()
-->
}

sp {three
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId)))
    (cond
      (positiveCond
        (condsForOneId))))
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId))))
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId)))))

================================================================================
ignore # comments
================================================================================

sp {one
# sp {two
    () #stuff
    #}
-->
  (funcFoo)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId)))
    (funcCall
      (funcName
        (string)))))

================================================================================
ignore ;# comments
================================================================================

sp {one
# sp {two
    () ;#stuff
    () ; #stuff
        ()
    ; #}
-->
  (funcFoo)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId)))
    (cond
      (positiveCond
        (condsForOneId)))
    (cond
      (positiveCond
        (condsForOneId)))
    (funcCall
      (funcName
        (string)))))
