test/corpus/03-flags.txt
================================================================================
i-support
================================================================================

sp {isupport
    :i-support
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
o-support
================================================================================

sp {osupport
    :o-support
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
chunk
================================================================================

sp {chunk
    :chunk
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
default
================================================================================

sp {default
    :default
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
interrupt
================================================================================

sp {interrupt
    :interrupt
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
multiple
================================================================================

sp {multiple
    :interrupt
    :i-support
    :chunk
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (flag)
      (flag)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
with doc
================================================================================

sp {with-doc
    "foo"
    :i-support
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name)
      (documentation)
      (flag))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
unknown flag
================================================================================

sp {bad-flag
    :x-support
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (ERROR
      (UNEXPECTED 'x')
      (UNEXPECTED 'u'))
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))

================================================================================
missing colon
================================================================================

sp {bad-flag
    i-support
    ()
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (ERROR)
    (LHS
      (cond
        (positiveCond
          (condsForOneId))))))
