test/corpus/11-disjunct.txt
================================================================================
strings
================================================================================

sp {strings
    (state <s> ^foo << a b >>)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (disjunctionTest
            (string)
            (string)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
quotes
================================================================================

sp {quoted
    (state <s> ^foo << |a| |\|b| |c| >>)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (disjunctionTest
            (quoted)
            (quoted)
            (quoted)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
should fail without left space; Soar takes '<<a' to be a string, then is baffled by '>>'; TODO: should fail
================================================================================

sp {no-space
    (state <s> ^foo <<a b >>)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (singleTest
            (string)))
        (valueTest
          (singleTest
            (string)))
        (valueTest
          (singleTest
            (string)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
should fail without right space; Soar takes 'b>>' to be a string, and so cannot finish the disjunction.
================================================================================

sp {no-space
    (state <s> ^foo << b>>)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (singleTest
        (variable))
      (attrValueTests
        (singleTest
          (string))
        (valueTest
          (disjunctionTest
            (string)
            (MISSING ">>")))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))
