test/corpus/16-conjunctiveCond.txt
================================================================================
negative
================================================================================

sp {negative
    (state <s>)
    -{
        (<s> ^foo <bar>)
        (<bar> ^baz boo)
    }
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (cond
      (negativeCond
        (positiveCond
          (conjunctiveCond
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (variable)))))))))
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))))))))))))

================================================================================
negative structure
================================================================================

sp {negative
    -{
        (<s> ^foo <bar>)
        (<bar> ^baz boo)
    }
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (negativeCond
        (positiveCond
          (conjunctiveCond
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (variable)))))))))
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))))))))))))

================================================================================
positive
================================================================================

sp {positive
    (state <s>)
    {
        (<s> ^foo <bar>)
        (<bar> ^baz boo)
    }
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (cond
      (positiveCond
        (conjunctiveCond
          (cond
            (positiveCond
              (condsForOneId
                (idTest
                  (test
                    (simpleTest
                      (singleTest
                        (variable)))))
                (attrValueTests
                  (attrTest
                    (test
                      (simpleTest
                        (singleTest
                          (string)))))
                  (valueTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))))))
          (cond
            (positiveCond
              (condsForOneId
                (idTest
                  (test
                    (simpleTest
                      (singleTest
                        (variable)))))
                (attrValueTests
                  (attrTest
                    (test
                      (simpleTest
                        (singleTest
                          (string)))))
                  (valueTest
                    (test
                      (simpleTest
                        (singleTest
                          (string))))))))))))))

================================================================================
positive structure
================================================================================

sp {positive
    {
        (state <s>)
        (<s> ^foo bar)
    }
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (conjunctiveCond
          (cond
            (positiveCond
              (condsForOneId
                (condType)
                (idTest
                  (test
                    (simpleTest
                      (singleTest
                        (variable))))))))
          (cond
            (positiveCond
              (condsForOneId
                (idTest
                  (test
                    (simpleTest
                      (singleTest
                        (variable)))))
                (attrValueTests
                  (attrTest
                    (test
                      (simpleTest
                        (singleTest
                          (string)))))
                  (valueTest
                    (test
                      (simpleTest
                        (singleTest
                          (string))))))))))))))

================================================================================
nested
================================================================================

sp {negative-nested
    (state <s>)
    -{
        (<s> ^foo <bar>)
        (<bar> ^baz boo)
        -{
            (<bar> ^boo <baz>)
            (<baz> ^foo <bar>)
        }
    }
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (cond
      (negativeCond
        (positiveCond
          (conjunctiveCond
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (variable)))))))))
            (cond
              (positiveCond
                (condsForOneId
                  (idTest
                    (test
                      (simpleTest
                        (singleTest
                          (variable)))))
                  (attrValueTests
                    (attrTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))
                    (valueTest
                      (test
                        (simpleTest
                          (singleTest
                            (string)))))))))
            (cond
              (negativeCond
                (positiveCond
                  (conjunctiveCond
                    (cond
                      (positiveCond
                        (condsForOneId
                          (idTest
                            (test
                              (simpleTest
                                (singleTest
                                  (variable)))))
                          (attrValueTests
                            (attrTest
                              (test
                                (simpleTest
                                  (singleTest
                                    (string)))))
                            (valueTest
                              (test
                                (simpleTest
                                  (singleTest
                                    (variable)))))))))
                    (cond
                      (positiveCond
                        (condsForOneId
                          (idTest
                            (test
                              (simpleTest
                                (singleTest
                                  (variable)))))
                          (attrValueTests
                            (attrTest
                              (test
                                (simpleTest
                                  (singleTest
                                    (string)))))
                            (valueTest
                              (test
                                (simpleTest
                                  (singleTest
                                    (variable)))))))))))))))))))
