test/corpus/17-rhsValues.txt
================================================================================
RHS values can be constants, variables, function calls, or crlf
================================================================================

sp {rhs*attr*value
    (state <s> ^z <z> )
-->
    (<s> ^foo (crlf) + ^bar (concat |queried| <z>) ^baz <baz>)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (crlf)
          (unaryPreference)))
      (attrValueMake
        (string)
        (valueMake
          (funcCall
            (funcName
              (string))
            (quoted)
            (variable))))
      (attrValueMake
        (string)
        (valueMake
          (variable))))))

================================================================================
RHS values can be constants, variables, function calls, or crlf
================================================================================

sp {rhs*attr*name
    (state <s> ^foo <foo> ^bar <n> ^x <x> ^y <y> ^z <z>)
-->
    (<s> ^(crlf).(concat |queried| <n>).<z>.(concat |queried| <n>) <foo>)
    (<s> ^(+ <x> <y>) (+ 2 <z>))
    (<n> ^.1 .2)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (variable)))
      (attrValueTests
        (string)
        (valueTest
          (variable))))
    (variableMutation
      (variable)
      (attrValueMake
        (crlf)
        (valueMake
          (floatConstant))
        (valueMake
          (funcCall
            (funcName
              (string))
            (quoted)
            (variable)))
        (valueMake
          (floatConstant))
        (valueMake
          (variable))
        (valueMake
          (floatConstant))
        (valueMake
          (funcCall
            (funcName
              (string))
            (quoted)
            (variable)))
        (valueMake
          (variable))))
    (variableMutation
      (variable)
      (attrValueMake
        (funcCall
          (funcName)
          (variable)
          (variable))
        (valueMake
          (funcCall
            (funcName)
            (string)
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (floatConstant)
        (valueMake
          (floatConstant))))))
