test/corpus/18-csoar-test-agents/BasicTests_testBasicElaborationAndMatch.soar.txt
================================================================================
UnitTests/SoarTestAgents/BasicTests_testBasicElaborationAndMatch.soar
================================================================================

sp {init*waterjug
(state <s> ^superstate nil)
-->
(<s> ^jug <j1> <j2>)
(<j1> ^contents 0)
(<j2> ^contents 1)
}

sp {monitor*contents
(state <s> ^jug <j>)
(<j> ^contents <contents>)
-->
(succeeded)
}


--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable))
        (valueMake
          (variable))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string)))))
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))))))
    (cond
      (positiveCond
        (condsForOneId
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))))))
    (funcCall
      (funcName
        (string)))))
